--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,26 +3,33 @@
           package="com.mbo.counter">
 
     <application
+        android:name=".CounterApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
         <activity
             android:name=".home.HomeActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
-
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
         <activity android:name=".addeditcounter.AddEditCounterActivity"/>
+
         <activity android:name=".counter.CounterActivity"/>
+
         <activity android:name=".settings.SettingsActivity"/>
+
         <activity android:name=".statistics.StatisticsActivity"/>
+
+        <activity android:name=".counterdetail.CounterDetailActivity"/>
     </application>
 
 </manifest>
