--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
         <activity android:name=".settings.SettingsActivity"/>
 
         <activity android:name=".statistics.StatisticsActivity"/>
+
+        <activity android:name=".countersettings.CounterSettingsActivity"/>
     </application>
 
 </manifest>
