Add expandable list view for counter groups

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,8 @@
         <activity android:name=".statistics.StatisticsActivity"/>
 
         <activity android:name=".countersettings.CounterSettingsActivity"/>
+
+        <activity android:name=".countergrouplist.CounterGroupListActivity"/>
     </application>
 
 </manifest>
