--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,8 @@
 
         <activity android:name=".countergrouplist.CounterGroupListActivity"/>
 
+        <activity android:name=".about.AboutActivity"/>
+
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="7e8a986867a519186bc346db093c31080833293e"/>
