--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
 
         <activity android:name=".countersettings.CounterSettingsActivity"/>
 
-        <activity android:name=".folderlist.CounterGroupListActivity"/>
+        <activity android:name=".folderlist.FolderListActivity"/>
 
         <activity android:name=".about.AboutActivity"/>
 
