--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,8 @@
 
         <activity android:name=".about.AboutActivity"/>
 
+        <activity android:name=".counterlist.CounterListActivity"/>
+
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="7e8a986867a519186bc346db093c31080833293e"/>
