Improvement in counter statistics graph UI + add folder statistics mvp

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,8 @@
 
         <activity android:name=".counterlist.CounterListActivity"/>
 
+        <activity android:name=".folderstatistics.FolderStatisticsActivity"/>
+
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="7e8a986867a519186bc346db093c31080833293e"/>
