--- a/app/src/main/assets/configuration.properties
+++ b/app/src/main/assets/configuration.properties
@@ -1,1 +1,2 @@
-contact_email=contact@bdzapps.io
+contact_email=contact@bdz-apps.com
+privacy_policy_url=http://www.bdz-apps.com/privacy_policy.html
