handle no internet connexion for policy privacy

--- a/app/src/main/assets/configuration.properties
+++ b/app/src/main/assets/configuration.properties
@@ -1,2 +1,3 @@
 contact_email=contact@bdz-apps.com
+privacy_policy_asset=file:///android_asset/privacy_policy.html
 privacy_policy_url=http://www.bdz-apps.com/privacy_policy.html
